fix for incorrect modal close button position on small screen

--- a/src/css/weave.css
+++ b/src/css/weave.css
@@ -821,6 +821,12 @@ div.weave-tree-view {
 	margin: 0 0 0 -200px;
 }
 
+.ui.mini.modal>.close {
+	top: 1.0535rem;
+	right: 1rem;
+	color: rgba(0,0,0,.87);
+}
+
 .weave-dropzone-file {
 	width: 100%;
 	height: 100%;
